Write XP section, add references.

--- a/references.bib
+++ b/references.bib
@@ -1,6 +1,6 @@
 
 %% Support sites:
-%% http://www.ctan.org/tex-archive/macros/latex/contrib/supported/IEEEtran/ 
+%% http://www.ctan.org/tex-archive/macros/latex/contrib/supported/IEEEtran/
 %% and/or
 %% http://www.ieee.org
 %%**********************************************************************
@@ -14,12 +14,12 @@
 %% consequential, or any other damages, resulting from the use or misuse
 %% of any information contained here.
 %%
-%% This code is distributed under the Perl Artistic License 
-%% ( http://language.perl.com/misc/Artistic.html ) 
+%% This code is distributed under the Perl Artistic License
+%% ( http://language.perl.com/misc/Artistic.html )
 %% and may be freely used, distributed and modified - subject to the
 %% constraints therein.
 %% Retain all contribution notices, credits and disclaimers.
-%% 
+%%
 %% All comments are the opinions of their respective authors and are not
 %% necessarily endorsed by the IEEE.
 %%**********************************************************************
@@ -31,7 +31,7 @@
 % entered whenever possible as some (non-IEEE) bibliography styles use
 % full names. IEEEtran.bst will automatically abbreviate when it
 % encounters full names.
- 
+
 
 % references for the IEEEtran.bst documentation
 % the distribution site for IEEEtran.bst
@@ -39,7 +39,7 @@
 @Comment(BIBTEMPLATE .)
 @Comment(BIBREFERENCES stdalphabetic)
 @Comment{BIBSEPARATORS ",;&"}
-		  
+
 % BibTeX bibliography string definitions of the ABBREVIATED titles of
 % IEEE journals and magazines taken from IEEEabrv.bib
 @STRING{AES   = "{IEEE} Trans. Aerosp. Electron. Syst."}
@@ -198,15 +198,15 @@
 @inproceedings{Alcantarilla10icra,
    author = {P.F. Alcantarilla and S.M. Oh and G. Mariottini and L.M. Bergasa and F. Dellaert},
    title = {\href{http://ieeexplore.ieee.org/xpl/freeabs_all.jsp?arnumber=5509383}{Learning Visibility of Landmarks for Vision-Based Localization}},
-   booktitle = ICRA, 
+   booktitle = ICRA,
    address = {Anchorage, AK, USA},
-   year = {2010} 
+   year = {2010}
 }
 
 @inproceedings{Alcantarilla11icra,
    author = {P.F. Alcantarilla and K. Ni and L.M. Bergasa and F. Dellaert},
    title = {\href{http://ieeexplore.ieee.org/xpl/freeabs_all.jsp?arnumber=5979650}{Visibility Learning in Large-Scale Urban Environment}},
-   booktitle = ICRA, 
+   booktitle = ICRA,
    address = {Shanghai, China},
    year = {2011}
 }
@@ -221,8 +221,8 @@
   pages = {1--12},
   year = {2003}
  }
- 
- 
+
+
 @article{Atkeson97ai,
     author = {C. Atkeson and  A. Moore and S. Schaal},
     title = {Locally Weighted Learning},
@@ -288,7 +288,272 @@
  pages  = {1178--1193},
  year = {2009}
  }
- 
+
+@inproceedings{Dalibard11humanoids,
+author={S.~Dalibard and A.~El~Khoury and F.~Lamiraux and M.~Taix and J.-P.~Laumond},
+booktitle={11th IEEE-RAS Intl. Conference on Humanoid Robots},
+title={\href{http://hal.archives-ouvertes.fr/docs/00/62/46/84/PDF/dalibard-humanoids11.pdf}{Small-space controllability of a walking humanoid robot}},
+year={2011},
+month={oct.},
+volume={},
+number={},
+pages={739 -744},
+keywords={},
+doi={10.1109/Humanoids.2011.6100807},
+ISSN={2164-0572},}
+
+@inproceedings{Mansard09icar,
+author={Mansard, N. and Stasse, O. and Evrard, P. and Kheddar, A.},
+booktitle={Proc. of the International Conference on Advanced Robotics (ICAR)},
+title={\href{http://homepages.laas.fr/nmansard/article/2009_icar_mansard.pdf}{A versatile Generalized Inverted Kinematics implementation for collaborative working humanoid robots: The Stack Of Tasks}},
+year={2009},
+month={june},
+volume={},
+number={},
+pages={1-6},
+doi={},
+ISSN={},
+}
+
+
+@STRING{
+IEEE_HUMANOIDS04 = {4th {IEEE}/{RAS}
+{I}nternational {C}onference on {H}umanoid {R}obots ({H}umanoids)}
+}
+
+@STRING{
+IEEE_HUMANOIDS05 = {5th {IEEE}/{RAS}
+{I}nternational {C}onference on {H}umanoid {R}obots ({H}umanoids)}
+}
+
+@STRING{
+IEEE_HUMANOIDS10 = {10th {IEEE}/{RAS}
+{I}nternational {C}onference on {H}umanoid {R}obots ({H}umanoids)}
+}
+
+@STRING{
+IEEE_HUMANOIDS11 = {11th {IEEE}/{RAS}
+{I}nternational {C}onference on {H}umanoid {R}obots ({H}umanoids)}
+}
+
+% Humanoid robotics
+
+@INPROCEEDINGS{04humanoids.harada,
+author={Harada, K. and Kajita, S. and Kaneko, K. and Hirukawa, H.},
+booktitle=IEEE_HUMANOIDS04,
+title={An analytical method on real-time gait planning for a humanoid
+                  robot},
+year={2004},
+month={nov.},
+volume={2},
+number={},
+pages={640-655},
+keywords={center of gravity; humanoid robot; quasi-real-time method;
+                  real-time gait planning; zero moment point;
+                  collision avoidance; humanoid robots; legged
+                  locomotion;},
+doi={10.1109/ICHR.2004.1442676},
+ISSN={ },
+}
+
+@INPROCEEDINGS{10humanoids.kanoun,
+author={Kanoun, O. and Laumond, J.-P.},
+booktitle=IEEE_HUMANOIDS10,
+ title={Optimizing the stepping of a humanoid robot for a sequence of
+                  tasks},
+year={2010},
+month={dec.},
+volume={},
+number={},
+pages={204-209},
+keywords={HRP-2;dynamic programming approach;humanoid robot;inverse
+                  kinematics problem;robot locomotion;stepping plan
+                  optimization problem;virtual redundant
+                  manipulator;dynamic programming;humanoid
+                  robots;legged locomotion;manipulator
+                  kinematics;redundant manipulators;},
+doi={10.1109/ICHR.2010.5686301},
+ISSN={},
+}
+
+
+@INPROCEEDINGS{11icra.perrin,
+author={Perrin N., Lamiraux F., Yoshida E.},
+booktitle=IEEE_ICRA,
+title={A Biped Walking Pattern Generator based on "Half-Steps" for
+                  Dimensionality Reduction},
+year={2011},
+month={may},
+volume={},
+number={},
+pages={1270-1275},
+}
+
+@INPROCEEDINGS{10icra.perrin,
+author={Perrin, N. and Stasse, O. and Lamiraux, F. and Yoshida, E.},
+booktitle=IEEE_ICRA,
+title={Approximation of feasibility tests for reactive walk on HRP-2},
+year={2010},
+month={may},
+volume={},
+number={},
+pages={4243-4248},
+keywords={feasibility test;legged humanoid robot;online motion
+                  planning;pattern generator;reactive walk;robot
+                  HRP-2;gait analysis;humanoid robots;legged
+                  locomotion;path planning;},
+doi={10.1109/ROBOT.2010.5509395},
+ISSN={1050-4729},
+}
+
+@INPROCEEDINGS{11icra.dimitrov,
+author={Dimitrov, Dimitar and Paolillo, Antonio and Wieber,
+                  Pierre-Brice},
+title={{Walking motion generation with online foot position adaptation
+                  based on l1- and l$\infty$-norm penalty
+                  formulations}},
+booktitle=IEEE_ICRA,
+year={2011},
+address={Shanghai, China},
+url={http://hal.inria.fr/inria-00567671/en}
+}
+
+@ARTICLE{10ar.herdt,
+author={Herdt, Andrei and Diedam, Holger and Wieber, Pierre-Brice and
+                  Dimitrov, Dimitar and Mombaur, Katja and Diehl,
+                  Moritz},
+title={{Online Walking Motion Generation with Automatic Foot Step
+                  Placement}},
+journal={{Advanced Robotics}},
+publisher={Brill Academic Publishers},
+volume={24},
+number={5-6},
+pages={719-737},
+year={2010},
+url={http://hal.inria.fr/inria-00391408/en}
+}
+
+@INPROCEEDINGS{06humanoids.thompson,
+author={Thompson, S. and Kagami, S. and Nishiwaki, K.},
+booktitle={Proc. of the 6th IEEE/RAS International Conference on
+                  Humanoid Robots (Humanoids)},
+title={Localisation for Autonomous Humanoid Navigation},
+year={2006},
+month={dec.},
+volume={},
+number={},
+pages={13 -19},
+keywords={autonomous humanoid navigation;bipedal locomotion;gaze
+                  attraction behaviour;humanoid position
+                  uncertainty;laser range sensor;motion
+                  model;nontrivial environment;particle
+                  filter;particle prediction;position accuracy;robot
+                  localisation;robot odometry;SLAM (robots);humanoid
+                  robots;laser ranging;legged locomotion;motion
+                  control;navigation;position control;},
+doi={10.1109/ICHR.2006.321357},
+ISSN={},
+}
+
+@INPROCEEDINGS{05humanoids.thompson,
+author={Thompson, S. and Kagami, S.},
+booktitle=IEEE_HUMANOIDS05,
+title={Humanoid robot localisation using stereo vision},
+year={2005},
+month={dec.},
+volume={},
+number={},
+pages={19 -25},
+keywords={2D localisation techniques;humanoid robot localisation;jerky
+                  video sequences;robot odometry;stereo vision;wheeled
+                  robots;control engineering computing;distance
+                  measurement;humanoid robots;image sequences;mobile
+                  robots;path planning;stereo image processing;},
+doi={10.1109/ICHR.2005.1573539},
+ISSN={},
+}
+
+@INPROCEEDINGS{06icra.nishiwaki,
+author={Nishiwaki, K. and Kagami, S.},
+booktitle=IEEE_ICRA,
+title={High frequency walking pattern generation based on preview
+                  control of ZMP},
+year={2006},
+month={may},
+volume={},
+number={},
+pages={2667-2672},
+keywords={ZMP;applied force change;dynamically stable humanoid walking
+                  pattern;high frequency walking pattern
+                  generation;horizontal torso trajectory;humanoid
+                  HRP-2;pattern updating;preview control;sensor
+                  feedback;short cycle generation;walking
+                  control;feedback;humanoid robots;legged
+                  locomotion;motion control;position
+                  control;predictive control;robot dynamics;},
+doi={10.1109/ROBOT.2006.1642104},
+ISSN={1050-4729},
+}
+
+@INPROCEEDINGS{05humanoids.michel,
+author={Michel, P. and Chestnutt, J. and Kuffner, J. and Kanade, T.},
+booktitle=IEEE_HUMANOIDS05,
+title={Vision-guided humanoid footstep planning for dynamic
+                  environments},
+year={2005},
+month={dec.},
+volume={},
+number={},
+pages={13-18},
+keywords={Honda ASIMO humanoid robot;biped humanoid robots;dynamic
+                  environments;obstacle avoidance;stable walking
+                  capabilities;time-limited planning
+                  horizon;vision-based sensing;vision-guided humanoid
+                  footstep planning;collision avoidance;humanoid
+                  robots;legged locomotion;robot dynamics;robot
+                  vision;},
+doi={10.1109/ICHR.2005.1573538},
+ISSN={},
+}
+
+@InBook{98deLucaOrioloSamson,
+  author = 	 {A.~de Luca and G. Oriolo and C. Samson},
+  title = 	 {Robot motion planning and control},
+  chapter = 	 {Feedback Control of a Nonholonomic Car-like Robot},
+  publisher = 	 {Springer},
+  year = 	 1998,
+  number = 	 {ISBN 3-540-76219-1},
+  series = 	 {Lectures Notes in Control and Information Sciences 229},
+  edition = 	 {{J}ean-{P}aul {L}aumond}
+}
+
+@InProceedings{06icra.MichelChestnut,
+  author = 	 {P.~Michel and J. Chestnut and S. Kagami and
+                  K. Nishiwaki and J. Kuffner and T. Kanade},
+  title = 	 {Online environment reconstruction for biped navigation},
+  booktitle = IEEE_ICRA,
+  pages = 	 {3089--3094},
+  year = 	 2006
+}
+
+@InBook{10springer.chestnut,
+  author = 	 {J.~Chestnut},
+  title = 	 {Motion planning for humanoid robots},
+  chapter = 	 {Navigation and Gait Planning},
+  publisher = 	 {Springer},
+  year = 	 2010,
+  edition = 	 {{K}.~{H}arada and {E}.~{Y}oshida and {K}.~{Y}okoi}}
+
+@InProceedings{01icra.KajitaKanehiro,
+  author = 	 {S.~Kajita and F.~Kanehiro and K.~Kaneko and K.~Yokoi
+                  and H.~Hirukawa},
+  title = 	 {The 3D linear inverted pendulum mode: a simple
+                  modeling for a biped walking pattern generation},
+  booktitle = IEEE_RSJ_IROS,
+  pages = 	 {239--246},
+  year = 	 2001}
+
+
 
 
 %********************************************************************************************************
@@ -300,7 +565,7 @@
 % (just like multiple \cite{} of the same entry key place only one entry
 % in the bibliography.)
 % The available control fields are:
-% 
+%
 % CTLuse_article_number
 % "no" turns off the display of the number for articles.
 % "yes" enables
@@ -308,45 +573,45 @@
 % CTLuse_paper
 % "no" turns off the display of the paper and type fields in inproceedings.
 % "yes" enables
-% 
-% CTLuse_forced_etal 
+%
+% CTLuse_forced_etal
 % "no" turns off the forced use of "et al."
 % "yes" enables
-% 
+%
 % CTLmax_names_forced_etal
 % The maximum number of names that can be present beyond which an "et al."
 % usage is forced. Be sure that CTLnames_show_etal (below)
 % is not greater than this value!
-% 
+%
 % CTLnames_show_etal
 % The number of names that will be shown with a forced "et al.".
 % Must be less than or equal to CTLmax_names_forced_etal
-% 
-% CTLuse_alt_spacing 
+%
+% CTLuse_alt_spacing
 % "no" turns off the alternate interword spacing for entries with URLs.
 % "yes" enables
-% 
+%
 % CTLalt_stretch_factor
 % If alternate interword spacing for entries with URLs is enabled, this is
 % the interword spacing stretch factor that will be used. For example, the
 % default "4" here means that the interword spacing in entries with URLs can
 % stretch to four times normal. Does not have to be an integer.
-% 
+%
 % CTLdash_repeated_names
 % "no" turns off the "dashification" of repeated (i.e., identical to those
 % of the previous entry) names. IEEE normally does this.
 % "yes" enables
-% 
+%
 % CTLname_format_string
 % The name format control string as explained in the BibTeX style hacking
 % guide.
 % IEEE style "{f.~}{vv~}{ll}{, jj}" is the default,
-% 
+%
 % CTL_name_latex_cmd
 % A LaTeX command that each name will be fed to (e.g., "\textsc").
 % Leave empty if no special font is desired for the names.
 % The default is empty.
-% 
+%
 % Those fields that are not to be changed can be left out or empty.
 @IEEEtranBSTCTL{BSTcontrol,
   CTLuse_article_number     = "yes",
