--- a/src/conclusion.tex
+++ b/src/conclusion.tex
@@ -1,3 +1,9 @@
 \section{Future Work and Conclusions}\label{sec:conclusions}
 
 The conclusion goes here.
+
+
+%%% Local Variables:
+%%% ispell-local-dictionary: "american"
+%%% LocalWords:  odometry HRP
+%%% End:
