--- a/src/introduction.tex
+++ b/src/introduction.tex
@@ -1,1 +1,7 @@
 \section{Introduction}~\label{sec:introduction}
+
+
+%%% Local Variables:
+%%% ispell-local-dictionary: "american"
+%%% LocalWords:  odometry HRP
+%%% End:
