--- a/src/related_work.tex
+++ b/src/related_work.tex
@@ -1,3 +1,9 @@
 \section{Related Work}\label{sec:related}
 
 \cite{05humanoids.thompson, 06humanoids.thompson, 05humanoids.michel, 06icra.MichelChestnut}
+
+
+%%% Local Variables:
+%%% ispell-local-dictionary: "american"
+%%% LocalWords:  odometry HRP
+%%% End:
